--- a/programs/iron-throne-consensus/Cargo.toml
+++ b/programs/iron-throne-consensus/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "dao-voting"
+name = "iron-throne-consensus"
 version = "0.1.0"
 description = "Created with Anchor"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "dao_voting"
+name = "iron_throne_consensus"
 
 [features]
 no-entrypoint = []
